--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
       <a-assets>
         <!-- <a-asset-item id="chinese_dragon_trim" src="./static/3D-file/gltf/chinese_dragon_trim/test1.gltf"></a-asset-item> -->
         <a-asset-item id="Megaman" src="./static/3D-file/glb/Megaman.glb"></a-asset-item>
-        <a-asset-item id="george_bread" src="./static/3D-file/glb/george_beard.glb"></a-asset-item>
+        <!-- <a-asset-item id="george_bread" src="./static/3D-file/glb/george_beard.glb"></a-asset-item> -->
+        <a-asset-item id="chinese_dragon_trim" src="./static/3D-file/gltf/chinese_dragon_trim/test1.gltf"></a-asset-item>
       </a-assets>
 
       <a-entity id="example-target" mindar-image-target="targetIndex: 0">   
@@ -68,7 +69,7 @@
         const modelEl = document.querySelector("#model");
         const exampleTarget = document.querySelector("#example-target");
         const modelInfoEl = document.getElementById("model-info");
-        const models = ["Megaman", "george_bread"];
+        const models = ["Megaman", "chinese_dragon_trim"];
         
         
 
@@ -86,7 +87,7 @@
           const randomModel = models[Math.floor(Math.random() * models.length)];
           console.log("Selected Model: ", randomModel);
 
-          modelEl.setAttribute("gltf-model", `./static/3D-file/glb/${randomModel}.glb`);
+          modelEl.setAttribute("gltf-model", `#${randomModel}`);
           // modelEl.setAttribute("src", randomModel);
 
           if (randomModel === "Megaman") {
