--- a/index.html
+++ b/index.html
@@ -62,6 +62,38 @@
       <a-camera position="0 0 0" look-controls="enabled: false" cursor="fuse: false; rayOrigin: mouse;" raycaster="far: ${customFields.libVersion}; objects: .clickable"></a-camera>
 
     </a-scene>
+    <!-- <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        const sceneEl = document.querySelector("a-scene");
+        const modelEl = document.querySelector("#model");
+        const exampleTarget = document.querySelector("#example-target");
+        const modelInfoEl = document.getElementById("model-info");
+        const models = ["Megaman", "spider_man"];
+
+        // Listen for the mindar-target-detected event
+        exampleTarget.addEventListener("targetFound", event => {
+          console.log("Target detected:");
+          console.log("Loading random model...");
+          
+          const randomModel = models[Math.floor(Math.random() * models.length)];
+          console.log("Selected Model: ", randomModel);
+
+          // modelEl.setAttribute("gltf-model", `./static/3D-file/glb/${randomModel}.glb`);
+
+          if (randomModel === "Megaman") {
+            modelEl.setAttribute("gltf-model", `./static/3D-file/glb/${randomModel}.glb`);
+            modelEl.setAttribute("position", "0 -0.5 0");
+            modelEl.setAttribute("scale", "3.5 3.5 3.5");
+            modelInfoEl.textContent = "Megaman rendered";
+          } else if (randomModel === "spider_man") {
+            modelEl.setAttribute("gltf-model", `./static/3D-file/glb/${randomModel}.glb`);
+            modelEl.setAttribute("position", "0 -3 -9");
+            modelEl.setAttribute("scale", "2 2 2");
+            modelInfoEl.textContent = "Spiderman rendered";
+          }
+        });
+      });
+    </script> -->
     <script>
       document.addEventListener("DOMContentLoaded", function () {
         const sceneEl = document.querySelector("a-scene");
