--- a/index.html
+++ b/index.html
@@ -101,6 +101,8 @@
         const exampleTarget = document.querySelector("#example-target");
         const modelInfoEl = document.getElementById("model-info");
         const models = ["Megaman", "spider_man"];
+        const textOptions = ["Megaman rendered", "Spiderman rendered", "Another option", "Yet another option"];
+
 
         // Listen for the mindar-target-detected event
         exampleTarget.addEventListener("targetFound", event => {
@@ -116,13 +118,16 @@
             modelEl.setAttribute("gltf-model", `./static/3D-file/glb/${randomModel}.glb`);
             modelEl.setAttribute("position", "0 -0.5 0");
             modelEl.setAttribute("scale", "3.5 3.5 3.5");
-            modelInfoEl.textContent = "Megaman rendered";
+            // modelInfoEl.textContent = "Megaman rendered";
           } else if (randomModel === "spider_man") {
             modelEl.setAttribute("gltf-model", `./static/3D-file/glb/${randomModel}.glb`);
             modelEl.setAttribute("position", "0 -3 -9");
             modelEl.setAttribute("scale", "2 2 2");
-            modelInfoEl.textContent = "Spiderman rendered";
+            // modelInfoEl.textContent = "Spiderman rendered";
           }
+          // Set random text content
+          const randomText = textOptions[Math.floor(Math.random() * textOptions.length)];
+          modelInfoEl.textContent = randomText;
         });
       });
     </script>
