--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         const exampleTarget = document.querySelector("#example-target");
         const modelInfoEl = document.getElementById("model-info");
         const models = ["Megaman", "spider_man"];
-        const textOptions = ["Megaman rendered", "Spiderman rendered", "Another option", "Yet another option"];
+        const textOptions = ["CONGRATZZ U WON SOMETHING", "UNFORTUNATELY", "TRY AGAIN NEXT TIME", "REFRESH PLEASE", "HAVE FUN"];
 
 
         // Listen for the mindar-target-detected event
