--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     </div>
 
-    <div id="text-box" style="position: absolute; top: 10px; left: 10px; background-color: rgba(255, 255, 255, 0.8); padding: 10px; border-radius: 5px; font-family: 'Roboto', sans-serif;">
+    <div id="text-box" style="position: absolute; top: 10px; left: 10px; background-color: rgba(255, 255, 255, 0.8); padding: 10px; border-radius: 5px; font-family: 'Roboto', sans-serif; display: none;">
       <p id="model-info" style="margin: 0; color: black;"></p>
     </div>
 
