--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@
       <p id="model-info" style="margin: 0; color: black;"></p>
     </div>
 
+    <div class="fortune-cookie" id="fortuneCookie">
+      <div class="cookie-left" id="cookieLeft"></div>
+      <div class="cookie-right" id="cookieRight"></div>
+    </div>
+    <div class="fortune-slip" id="fortuneSlip"></div>
+
     <a-scene mindar-image="imageTargetSrc: ./static/mind-file/Shinchan.mind; uiScanning: #scanning-overlay; filterMinCF:0.0001; filterBeta: 0.001;" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false" embedded>
 
       <a-assets>
@@ -101,7 +107,26 @@
         const exampleTarget = document.querySelector("#example-target");
         const modelInfoEl = document.getElementById("model-info");
         const models = ["Megaman", "spider_man"];
-        const textOptions = ["CONGRATZZ U WON SOMETHING", "UNFORTUNATELY", "TRY AGAIN NEXT TIME", "REFRESH PLEASE", "HAVE FUN"];
+        const textOptions = ["Success is on your horizon.",
+                            "Good news will come to you by mail.",
+                            "A pleasant surprise is waiting for you.",
+                            "You will meet someone special soon.",
+                            "Your hard work will pay off.",
+                            "Adventure is in your future.",
+                            "Happiness will come your way soon.",
+                            "A lifetime of happiness lies ahead of you.",
+                            "You will soon find the love of your life.",
+                            "Financial prosperity is coming your way.",
+                            "A new opportunity will present itself to you.",
+                            "Your creative talents will be recognized and rewarded.",
+                            "You will make lasting memories with friends and family.",
+                            "Travel plans will bring you joy and excitement.",
+                            "Unexpected blessings are coming your way.",
+                            "You will overcome obstacles with ease.",
+                            "An exciting adventure awaits you.",
+                            "Your kindness will be repaid in unexpected ways.",
+                            "You will achieve your goals with determination and perseverance.",
+                            "A windfall of good fortune is heading your way."];
         const textBox = document.getElementById("text-box");
 
 
@@ -131,6 +156,9 @@
           modelInfoEl.textContent = randomText;
 
           textBox.style.display = "block";
+
+          const fortuneCookie = document.getElementById('fortuneCookie');
+          fortuneCookie.classList.add('cracked');
         });
       });
     </script>
