--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         const modelEl = document.querySelector("#model");
         const exampleTarget = document.querySelector("#example-target");
         const modelInfoEl = document.getElementById("model-info");
-        const models = ["Megaman", "spider_man"];
+        // const models = ["Megaman", "spider_man"];
         const fortunes = ["Success is on your horizon.",
                             "Good news will come to you by mail.",
                             "A pleasant surprise is waiting for you.",
@@ -141,17 +141,17 @@
 
           // modelEl.setAttribute("gltf-model", `./static/3D-file/glb/${randomModel}.glb`);
 
-          if (randomModel === "Megaman") {
-            modelEl.setAttribute("gltf-model", `./static/3D-file/glb/${randomModel}.glb`);
-            modelEl.setAttribute("position", "0 -0.5 0");
-            modelEl.setAttribute("scale", "3.5 3.5 3.5");
-            // modelInfoEl.textContent = "Megaman rendered";
-          } else if (randomModel === "spider_man") {
-            modelEl.setAttribute("gltf-model", `./static/3D-file/glb/${randomModel}.glb`);
-            modelEl.setAttribute("position", "0 -3 -9");
-            modelEl.setAttribute("scale", "2 2 2");
-            // modelInfoEl.textContent = "Spiderman rendered";
-          }
+          // if (randomModel === "Megaman") {
+          //   modelEl.setAttribute("gltf-model", `./static/3D-file/glb/${randomModel}.glb`);
+          //   modelEl.setAttribute("position", "0 -0.5 0");
+          //   modelEl.setAttribute("scale", "3.5 3.5 3.5");
+          //   // modelInfoEl.textContent = "Megaman rendered";
+          // } else if (randomModel === "spider_man") {
+          //   modelEl.setAttribute("gltf-model", `./static/3D-file/glb/${randomModel}.glb`);
+          //   modelEl.setAttribute("position", "0 -3 -9");
+          //   modelEl.setAttribute("scale", "2 2 2");
+          //   // modelInfoEl.textContent = "Spiderman rendered";
+          // }
           // Set random text content
           // const randomText = textOptions[Math.floor(Math.random() * textOptions.length)];
           // modelInfoEl.textContent = randomText;
