--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     </div>
 
-    <div class="fortune-cookie" id="fortuneCookie" style="display: none">
+    <div class="fortune-cookie" id="fortuneCookie">
       <div class="cookie-left" id="cookieLeft"></div>
       <div class="cookie-right" id="cookieRight"></div>
     </div>
@@ -70,16 +70,11 @@
                             "You will achieve your goals with determination and perseverance.",
                             "A windfall of good fortune is heading your way."];
 
-        const fortuneCookie = document.getElementById('fortuneCookie');
-        fortuneCookie.style.display = "none";
 
         // Listen for the mindar-target-detected event
         exampleTarget.addEventListener("targetFound", event => {
           console.log("Target detected:");
           console.log("Loading random model...");
-
-          // Show the fortune cookie when the target is found
-          fortuneCookie.style.display = "block";
 
           const randomFortune = fortunes[Math.floor(Math.random() * fortunes.length)];
           const fortuneSlip = document.getElementById('fortuneSlip');
