--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
           fortuneSlip.textContent = randomFortune;
 
           const fortuneCookie = document.getElementById('fortuneCookie');
+          fortuneCookie.style.display = "none";
           fortuneCookie.classList.add('cracked');
         });
       });
