--- a/index.html
+++ b/index.html
@@ -82,6 +82,16 @@
           // Show the fortune cookie after the target is found
           fortuneCookie.style.display = "block";
         });
+        
+        // Function for confetti
+        const count = 200;
+        const defaults = { origin: { y: 0.7 } };
+
+        function fire(particleRatio, opts) {
+          confetti(Object.assign({}, defaults, opts, {
+            particleCount: Math.floor(count * particleRatio),
+          }));
+        }
 
         // Listen for the click event on the scene
         document.querySelector("a-scene").addEventListener("click", function() {
@@ -93,11 +103,35 @@
           // Set timeout to add 'cracked' class after 1 second
           setTimeout(() => {
             fortuneCookie.classList.add('cracked');
-            confetti({
-              particleCount: 100,
-              spread: 70,
-              origin: { y: 0.6 }
+
+            // Trigger confetti effect
+            fire(0.25, {
+              spread: 26,
+              startVelocity: 55,
             });
+
+            fire(0.2, {
+              spread: 60,
+            });
+
+            fire(0.35, {
+              spread: 100,
+              decay: 0.91,
+              scalar: 0.8,
+            });
+
+            fire(0.1, {
+              spread: 120,
+              startVelocity: 25,
+              decay: 0.92,
+              scalar: 1.2,
+            });
+
+            fire(0.1, {
+              spread: 120,
+              startVelocity: 45,
+            });
+
           }, 1000);
         });
       });
