--- a/index.html
+++ b/index.html
@@ -93,8 +93,14 @@
           }));
         }
 
+        let hasClicked = false; // Flag to prevent multiple clicks
+
         // Listen for the click event on the scene
         document.querySelector("a-scene").addEventListener("click", function() {
+
+          if (hasClicked) return; // If already clicked, do nothing
+          hasClicked = true; // Set flag to true after the first click
+          
           // Display the fortune slip and crack the fortune cookie
           const fortuneSlip = document.getElementById('fortuneSlip');
           const randomFortune = fortunes[Math.floor(Math.random() * fortunes.length)];
