Removing the Scanning overlay

--- a/index.html
+++ b/index.html
@@ -150,6 +150,8 @@
             });
 
           }, 1000);
+          const uiOverlay = document.getElementById('UI-overlay');
+          uiOverlay.style.display = 'none';
         });
       });
     </script>
