--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@
             </div>
           </div>
         </div>
-
       </div>
-
     </div>
 
     <div class="fortune-cookie" id="fortuneCookie" style="display: none;">
@@ -35,12 +33,10 @@
     </div>
     <div class="fortune-slip" id="fortuneSlip"></div>
 
-
     <a-scene mindar-image="imageTargetSrc: ./static/mind-file/Shinchan.mind; uiScanning: #scanning-overlay; filterMinCF:0.0001; filterBeta: 0.001;" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false" embedded>
 
       <a-entity id="example-target" mindar-image-target="targetIndex: 0">  
         <a-gltf-model id="model" rotation="0 0 0 " position="0 -3 -9" scale="2 2 2" animation-mixer></a-gltf-model>
-
       </a-entity>
 
       <a-camera position="0 0 0" look-controls="enabled: false" cursor="fuse: false; rayOrigin: mouse;" raycaster="far: ${customFields.libVersion}; objects: .clickable"></a-camera>
@@ -49,26 +45,28 @@
     <script>
       document.addEventListener("DOMContentLoaded", function () {
         const exampleTarget = document.querySelector("#example-target");
-        const fortunes = ["Success is on your horizon.",
-                            "Good news will come to you by mail.",
-                            "A pleasant surprise is waiting for you.",
-                            "You will meet someone special soon.",
-                            "Your hard work will pay off.",
-                            "Adventure is in your future.",
-                            "Happiness will come your way soon.",
-                            "A lifetime of happiness lies ahead of you.",
-                            "You will soon find the love of your life.",
-                            "Financial prosperity is coming your way.",
-                            "A new opportunity will present itself to you.",
-                            "Your creative talents will be recognized and rewarded.",
-                            "You will make lasting memories with friends and family.",
-                            "Travel plans will bring you joy and excitement.",
-                            "Unexpected blessings are coming your way.",
-                            "You will overcome obstacles with ease.",
-                            "An exciting adventure awaits you.",
-                            "Your kindness will be repaid in unexpected ways.",
-                            "You will achieve your goals with determination and perseverance.",
-                            "A windfall of good fortune is heading your way."];
+        const fortunes = [
+          "Success is on your horizon.",
+          "Good news will come to you by mail.",
+          "A pleasant surprise is waiting for you.",
+          "You will meet someone special soon.",
+          "Your hard work will pay off.",
+          "Adventure is in your future.",
+          "Happiness will come your way soon.",
+          "A lifetime of happiness lies ahead of you.",
+          "You will soon find the love of your life.",
+          "Financial prosperity is coming your way.",
+          "A new opportunity will present itself to you.",
+          "Your creative talents will be recognized and rewarded.",
+          "You will make lasting memories with friends and family.",
+          "Travel plans will bring you joy and excitement.",
+          "Unexpected blessings are coming your way.",
+          "You will overcome obstacles with ease.",
+          "An exciting adventure awaits you.",
+          "Your kindness will be repaid in unexpected ways.",
+          "You will achieve your goals with determination and perseverance.",
+          "A windfall of good fortune is heading your way."
+        ];
         
         // Hide the fortune cookie initially
         const fortuneCookie = document.getElementById('fortuneCookie');
@@ -88,11 +86,6 @@
         const count = 200;
         const defaults = { origin: { y: 0.7 } };
 
-        // function fire(particleRatio, opts) {
-        //   confetti(Object.assign({}, defaults, opts, {
-        //     particleCount: Math.floor(count * particleRatio),
-        //   }));
-        // }
         function fire(particleRatio, opts) {
           const spread = Math.random() * 360; // Random spread angle between 0 and 360
           const startVelocity = Math.random() * 100; // Random start velocity between 0 and 100
@@ -105,9 +98,12 @@
         
         let hasClicked = false; // Flag to prevent multiple clicks
 
-        // Listen for the click event on the scene
-        document.querySelector("a-scene").addEventListener("click", function() {
+        // Listen for both click and touchstart events on the scene
+        document.querySelector("a-scene").addEventListener("click", handleInteraction);
+        document.querySelector("a-scene").addEventListener("touchstart", handleInteraction);
 
+        // Function to handle interaction (click or touch)
+        function handleInteraction(){
           if (hasClicked) return; // If already clicked, do nothing
           hasClicked = true; // Set flag to true after the first click
 
@@ -152,7 +148,7 @@
           }, 1000);
           const uiOverlay = document.getElementById('UI-overlay');
           uiOverlay.style.display = 'none';
-        });
+        }
       });
     </script>
   </body>
