--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
         const exampleTarget = document.querySelector("#example-target");
         const modelInfoEl = document.getElementById("model-info");
         const models = ["minecraft_chest", "spider_man"];
+        const textBox = document.getElementById("text-box");
+
 
         // Listen for the mindar-target-detected event
         exampleTarget.addEventListener("targetFound", event => {
